# patient360

./: .gitignore  README.md  package-lock.json
data/: mock_patient_metrics.json  sample_patients_data.json
docs/: HPM.md  database_design.md
patient360-backend/: pyproject.toml
patient360-backend/patient360api/: manage.py
patient360-backend/patient360api/patient360api/: asgi.py  settings.py  urls.py  wsgi.py
patient360-backend/patient360api/patients/: models.py  urls.py  views.py
patient360-backend/patient360api/patients/migrations/: 0001_initial.py  0002_patient_ssn.py  0003_alter_patient_patient_id.py
patient360-backend/patient360api/vitalsigns/: apps.py  models.py  serializers.py  urls.py  views.py
patient360-backend/patient360api/vitalsigns/migrations/: 0001_initial.py
patient360-front/: package-lock.json  package.json
patient360-front/src/: App.jsx  main.jsx
patient360-front/src/apps/: Landing.jsx  Staff.jsx
patient360-front/src/apps/patientMonitor/: ActivePatient.jsx  HealthTrends.jsx  MetricMultiselect.jsx  PatientListView.jsx  main.jsx
patient360-front/src/apps/patientMonitor/components/: BloodPressureChart.jsx  HealthTrendCharts.jsx  HeartRateChart.jsx  MetricMultiselect.jsx  PatientCard.jsx  PatientDetailView.jsx  PatientProfileCard.jsx  PatientSelect.jsx
patient360-front/src/apps/personnelMonitor/: main.jsx
patient360-front/src/components/: Card.jsx  Navbar.jsx  Sidebar.jsx
patient360-front/src/views/: Staff.jsx
