[tool.poetry]
name = "patient360-backend"
version = "0.1.0"
description = "Restful backend powered by Django"
authors = ["Hamid Aebadi <hamidebadi1996@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
psycopg = "^3.2.9"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
